[package]
name = "pci-driver"
version = "0.1.2"
edition = "2018"
description = "PCI/PCIe driver development library"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/pci-driver/pci-driver"
keywords = ["PCI", "PCIe", "driver", "user-space"]
categories = ["hardware-support"]

[features]
default = ["vfio"]
vfio = ["libc/std"]
_unsafe-op-in-unsafe-fn = []

[dependencies]
libc = { version = "0.2", default-features = false, optional = true }
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
byte-strings = "0.2.2"
